turtleart.triangleflat.TriangleFlat.scala.error
Compilation error:
TriangleFlat:7: error: ')' expected but '}' found.
} 
^